--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -127,7 +127,7 @@
   });
 </script>
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
+  $(document).ready(function() {
     $('.select2').select2({
       placeholder: "Rechercher un pays...",
       allowClear: true,
