--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -113,7 +113,7 @@
   });
 </script>
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
+  $(document).ready(function() {
     $('.select2').select2({
       placeholder: "Rechercher un/une designer...",
       allowClear: true,
