--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -98,7 +98,7 @@
   </section>
 </div>
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
+  $(document).ready(function() {
     $('.select2').select2({
       placeholder: "Rechercher un établissement...",
       allowClear: true,
