--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -2,6 +2,8 @@
 
 .body-show {
   padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
 }
 
 .header-show {
@@ -84,11 +86,11 @@
   width: 60vw;
   max-width: 1000px;
   margin-top: 82dvh;
-  transition: margin-top 0.3s ease;
+  transition: margin-top 0.6s ease;
 }
 
  .text-show.small-height {
-  margin-top: 48dvh; // Ajustez cette valeur selon vos besoins
+  margin-top: 54dvh; // Ajustez cette valeur selon vos besoins
 }
 
 .margin-text-header {
